arkts_static_test/02_LexicalElements/ets_cases/2.9.3_Floating_Point_Literals/compile-pass/LEX_02_09_03_001_PASS_FLOAT_STANDARD.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id LEX_02_09_03_001_PASS_FLOAT_STANDARD
 * @expect compile-pass
 * @section 2.9.3
 * @design 标准浮点字面量
 * @note compile-pass 用例：验证标准浮点语法
 */

// 标准浮点
let x1: double = 3.14
let x2: double = 0.5
let x3: double = 100.0
